all: Minor rewrite.